# ShadowCopy

./: .gitignore  BUILD_AND_TEST.md  CMakeLists.txt  CODE_REVIEW_RESPONSES.md  FEATURE_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_FINAL_SUMMARY.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LONELITH_INTEGRATION.md  README.md  Resource.h  STATUS.md  ShadowCopy.cpp  ShadowCopy.rc  ShadowCopy.slnx  ShadowCopy.vcxproj  ShadowCopy.vcxproj.filters  TESTING_CHECKLIST.md  Tirnakci.cpp  Tirnakci.rc  Tirnakci.vcxproj  Tirnakci.vcxproj.filters  UI_IMPROVEMENTS_IMPLEMENTED.md  UI_IMPROVEMENTS_SUMMARY.md  UI_MODERNIZATION_SUMMARY.md
enc_temp_folder/a4e1d32e673936fa41188ceee79368ea/: ShadowCopy.cpp
